--- a/css/main.css
+++ b/css/main.css
@@ -6,17 +6,29 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "DM Sans", sans-serif;
+  transition: all 3s linear;
 }
 .container {
   max-width: 1430px;
   margin: 0 auto;
 }
-.header {
+.bg__img {
   background-image: url(../images/home-bg.jpg);
+  width: 100%;
+  height: 900px;
 }
-.header__styles {
+.section__styles {
   font-size: 15px;
   font-weight: 500;
+}
+.home__styles {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 16px;
+}
+.title {
+  font-size: 40px;
+  font-weight: 700;
 }
 ul {
   display: flex;
@@ -26,6 +38,9 @@ ul {
 li {
   list-style: none;
   color: #fff;
+}
+a {
+  text-decoration: none;
 }
 /* header styles starts */
 .header {
@@ -54,3 +69,106 @@ li {
   border: none;
 }
 /* header styles ens=ds */
+/*  *home section starts */
+.home {
+  padding: 40px 0;
+  text-align: center;
+  color: #fff;
+}
+.home__wrapper {
+  margin-top: 150px;
+}
+.home__title {
+  font-weight: 700;
+  font-size: 70px;
+  line-height: 70px;
+  margin: 30px 0;
+}
+.home__type {
+  display: flex;
+  gap: 20px;
+  margin-left: 45%;
+}
+.home__search {
+  width: 930px;
+  height: 75.75px;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  gap: 100px;
+  border-radius: 80px;
+  padding: 10px;
+  color: #050b20;
+  margin-left: 250px;
+}
+.home__search--title {
+  margin-left: 20px;
+}
+
+.home__btn {
+  background-color: #405ff2;
+  border-radius: 60px;
+  padding: 20px;
+  border: none;
+  color: #fff;
+  width: 215px;
+}
+.home__p {
+  margin: 20px 0;
+}
+.home__car--type {
+  display: flex;
+  align-items: center;
+  margin-left: 450px;
+}
+.home__car--type-btn {
+  display: flex;
+  gap: 15px;
+  background: none;
+  border: none;
+  color: #ffffff;
+  padding: 16px 8px;
+  border-radius: 44px;
+  backdrop-filter: 10%;
+}
+/* home section ends */
+/* listing styles starts */
+.listing {
+  padding: 40px 0;
+}
+.listing__wrapper {
+  position: relative;
+  bottom: 70px;
+  border-top-left-radius: 80px;
+  border-top-right-radius: 80px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  padding: 30px 0;
+  background-color: #f9fbfc;
+}
+.listing__top {
+  display: flex;
+  margin: 30px 25px;
+  justify-content: space-between;
+}
+.listing__subtitle {
+  font-size: 1;
+}
+.listing__bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px 20px;
+}
+.listing__btn {
+  margin: 20px 0;
+  cursor: pointer;
+  width: 209px;
+  background-color: #ffffff;
+  padding: 15px;
+  border: 1px solid #e9e9e9;
+  border-radius: 16px;
+}
+.listing__btn > h4 {
+  text-align: center;
+}
+/* listing styles ends */
