--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@
   height: 900px;
 }
 .section__styles {
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 500;
 }
 .home__styles {
@@ -172,3 +172,30 @@ a {
   text-align: center;
 }
 /* listing styles ends */
+/* shop styles starts */
+.shop {
+  padding: 40px 0;
+}
+.shop__top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.shop__navigation {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  border-bottom: 1px solid #e9e9e9;
+}
+.shop__navigation--title {
+  cursor: pointer;
+  margin-bottom: 20px;
+  color: #050b20;
+}
+.shop__navigation--title:hover {
+  border-bottom: 5px solid #405ff2;
+}
+.shop__bottom {
+  display: flex;
+}
+/* shop styles ends */
