--- a/css/main.css
+++ b/css/main.css
@@ -197,5 +197,125 @@ a {
 }
 .shop__bottom {
   display: flex;
+  gap: 50px;
+}
+.shop__card {
+  margin-top: 28px;
+  width: 328px;
+  height: 433.1400146484375px;
+  border-radius: 16px;
+  border: 1px solid #e9e9e9;
+  line-height: 160%;
+}
+.shop__img {
+  width: 328px;
+  height: 218.66000366210938px;
+  border-radius: 16px 16px 0 0;
+}
+.shop__card--title {
+  padding: 0 30px;
+}
+.shop__card--p {
+  padding: 0 30px;
+}
+.shop__card--info {
+  padding: 0 30px;
+  text-align: center;
+  display: flex;
+  width: 18px;
+  justify-content: space-between;
+  gap: 70px;
+  text-align: center;
+  border-top: 1px solid #e9e9e9;
+  border-bottom: 1px solid #e9e9e9;
+  width: 85%;
+}
+.shop__card--info--title {
+  font-weight: 400;
+  font-size: 14px;
+  border: 0 1px 1px 1px solid #050b20;
+}
+.shop__card--price {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 30px;
+  text-align: center;
+  margin-top: 10px;
+}
+.shop__card--price--subtitle {
+  color: #405ff2;
+}
+.shop__card--control {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  position: relative;
+  top: 270px;
+  right: 105.5%;
+}
+.shop__btn {
+  background: none;
+  border-radius: 30px;
+  padding: 10px 20px;
+  border: 1px solid #e9e9e9;
+  width: 60px;
 }
 /* shop styles ends */
+/* about styles starts */
+.about {
+  padding: 40px 0;
+}
+.about__top {
+  display: flex;
+  align-items: center;
+}
+.about__img {
+  width: 704.6900024414062px;
+  height: 593.969970703125px;
+}
+.about__top--right {
+  background-color: #eef1fb;
+  width: 867px;
+  padding: 90px 20px;
+  color: #050b20;
+  border-radius: 0 16px 16px 0;
+}
+.about__title {
+  width: 547.3900146484375px;
+}
+.about__top--description {
+  width: 547.3900146484375px;
+  margin: 20px 0;
+}
+.about__top--list {
+  display: flex;
+  align-items: center;
+  margin: 17px 0;
+}
+.about__top--img {
+  background-color: #ffffff;
+  border-radius: 12.5px;
+  padding: 8px;
+}
+.about__btn {
+  background-color: #405ff2;
+  color: #ffffff;
+  padding: 30px 0;
+  border-radius: 12px;
+  width: 158.94000244140625px;
+  border: none;
+}
+.about__btn--title {
+  margin-bottom: 25px;
+}
+.about__bottom {
+  display: flex;
+  margin-left: 20%;
+  gap: 120px;
+  color: #050b20;
+}
+.about__bottom--list {
+  text-align: center;
+}
+/* about styles ends */
