--- a/css/main.css
+++ b/css/main.css
@@ -181,44 +181,87 @@ a {
   align-items: center;
   justify-content: space-between;
 }
-.shop__navigation {
+.shop__subtitle {
+  display: flex;
+  gap: 10px;
+}
+.shop__navigation,
+.type__navigation {
   display: flex;
   align-items: center;
   gap: 20px;
   border-bottom: 1px solid #e9e9e9;
+  margin: 20px 0;
 }
 .shop__navigation--title {
   cursor: pointer;
   margin-bottom: 20px;
   color: #050b20;
 }
-.shop__navigation--title:hover {
-  border-bottom: 5px solid #405ff2;
-}
 .shop__bottom {
   display: flex;
   gap: 50px;
 }
 .shop__card {
-  margin-top: 28px;
+  margin-top: 20px;
   width: 328px;
   height: 433.1400146484375px;
   border-radius: 16px;
   border: 1px solid #e9e9e9;
   line-height: 160%;
 }
-.shop__img {
-  width: 328px;
+.shop__card--box {
+  display: flex;
+  align-items: center;
+  gap: 140px;
+  position: relative;
+  top: 20px;
+  left: 20px;
+  z-index: 10;
+}
+.shop__card--subtitle,
+.shop__card--subtitle2 {
+  background-color: #3d923a;
+  border-radius: 30px;
+  padding: 10px;
+  color: #ffffff;
+  width: 110.37999725341797px;
+}
+.shop__card--subtitle2 {
+  background-color: #405ff2;
+}
+.shop__card--box-img {
+  background-color: #ffffff;
+  padding: 5px;
+  border-radius: 30px;
+}
+.shop__img,
+.shop__img2 {
   height: 218.66000366210938px;
   border-radius: 16px 16px 0 0;
 }
-.shop__card--title {
+.shop__img2 {
+  position: relative;
+  bottom: 45px;
+}
+.shop__card--title,
+.shop__card--title2 {
   padding: 0 30px;
 }
-.shop__card--p {
+.shop__card--title2 {
+  position: relative;
+  bottom: 45px;
+}
+.shop__card--p,
+.shop__card--p2 {
   padding: 0 30px;
 }
-.shop__card--info {
+.shop__card--p2 {
+  position: relative;
+  bottom: 45px;
+}
+.shop__card--info,
+.shop__card--info2 {
   padding: 0 30px;
   text-align: center;
   display: flex;
@@ -230,18 +273,27 @@ a {
   border-bottom: 1px solid #e9e9e9;
   width: 85%;
 }
+.shop__card--info2 {
+  position: relative;
+  bottom: 45px;
+}
 .shop__card--info--title {
   font-weight: 400;
   font-size: 14px;
   border: 0 1px 1px 1px solid #050b20;
 }
-.shop__card--price {
+.shop__card--price,
+.shop__card--price2 {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 30px;
   text-align: center;
   margin-top: 10px;
+}
+.shop__card--price2 {
+  position: relative;
+  bottom: 45px;
 }
 .shop__card--price--subtitle {
   color: #405ff2;
@@ -340,3 +392,82 @@ a {
   font-weight: 400;
 }
 /* popular styles ends */
+/* type styles starts */
+.type {
+  padding: 100px 0;
+  background-color: #050b20;
+  color: #ffffff;
+}
+.type__top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.type__navigation {
+  border-bottom: 1px solid #ffffff30;
+}
+.type__bottom {
+  display: flex;
+  gap: 20px;
+}
+.type__card {
+  display: flex;
+  width: 685px;
+}
+.type__img {
+  border-radius: 16px 0 0 16px;
+}
+.type__card--right {
+  background-color: #ffffff12;
+  border-radius: 0 16px 16px 0;
+  padding: 20px 5px;
+  line-height: 170%;
+}
+.type__p {
+  font-size: 14px;
+  font-weight: 400;
+  width: 266.8800048828125px;
+}
+.type__card--icon {
+  margin-left: 28px;
+}
+del {
+  margin-left: 28px;
+}
+.type__card--price {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-left: 28px;
+}
+.type__bottom-control {
+  display: flex;
+  align-items: center;
+  position: relative;
+  top: 190px;
+  right: 104%;
+}
+/* type styles ends */
+/* contact styles starts */
+.contact {
+  padding: 40px 0;
+}
+.contact__subtitle {
+  display: flex;
+  gap: 10px;
+}
+.contact__bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.contact__ul {
+  display: block;
+}
+.contact__li {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 27.75px;
+  color: #050b20;
+}
+/* contact styles ends */
